# rez-packages

libs/jpeg/3.0.1/: CMakeLists.txt  package.py
libs/tiff/: package.py
softs/binutils/2.25/: CMakeLists.txt
softs/gcc/6.5.0/: CMakeLists.txt  build.sh  package.py
softs/rv/2023.0.2/: CMakeLists.txt  package.py
